--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@
   padding: 1rem;
   background: var(--ui-01);
   box-shadow: 0 1px 3px 0 rgba(var(--black), 0.3);
-  z-index: 1;
+  z-index: 2;
   display: flex;
   justify-content: flex-start;
 }
