--- a/src/containers/EmojiIcon.css
+++ b/src/containers/EmojiIcon.css
@@ -1,13 +1,9 @@
-.emoji-button-wrapper {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
 .emoji-button {
   padding: 0 0.75rem 0 1rem;
   cursor: pointer;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .emoji-button:hover .icon-smile {
