--- a/src/containers/User.css
+++ b/src/containers/User.css
@@ -92,7 +92,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .User {
     padding: 0.75rem;
   }
